--- a/CoreFood/CoreFood/Views/Default/Components/CategoryGetList/Default.cshtml
+++ b/CoreFood/CoreFood/Views/Default/Components/CategoryGetList/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
     <ul class="nav navbar-nav nav_1">
         @foreach(var item in Model){
-        <li><a href="products.html">@item.categoryName</a></li>
+        <li><a href="/Default/CategoryDetails/@item.categoryID">@item.categoryName</a></li>
         }
     </ul>
 </div><!-- /.navbar-collapse -->
